Decided against svg path

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
     <head>
         <meta content="text/html;charset=utf-8" http-equiv="Content-Type"/>
+        <link href="style.css" rel="stylesheet" type="text/css">
+        <link href="fonts.googleapis.com/css?family=Open+Sans&amp;display=swap" rel="stylesheet">
     </head>
     <body>
         <!-- Note the usage of `type=module` here as this is an ES6 module -->
@@ -52,5 +54,20 @@
 
          run();
         </script>
+        <div class="flex-container" >
+                <div style="width:18%; margin:1%" class="item">1</div>
+                <div style="width:18%; margin:1%" class="item">2</div>
+                <div style="width:18%; margin:1%" class="item">3</div>
+                <div style="width:18%; margin:1%" class="item">4</div>
+                <div style="width:18%; margin:1%" class="item">5</div>
+
+                <div class="break"></div>
+
+                <div style="width:18%; margin:1%" class="item">6</div>
+                <div style="width:18%; margin:1%" class="item">7</div>
+                <div style="width:18%; margin:1%" class="item">8</div>
+                <div style="width:18%; margin:1%" class="item">9</div>
+                <div style="width:18%; margin:1%" class="item">10</div>
+        </div>
     </body>
 </html>
