First version that actually works

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <head>
         <meta content="text/html;charset=utf-8" http-equiv="Content-Type"/>
         <link href="style.css" rel="stylesheet" type="text/css">
-        <link href="fonts.googleapis.com/css?family=Open+Sans&amp;display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Roboto&amp;display=swap" rel="stylesheet">
     </head>
     <body>
         <!-- Note the usage of `type=module` here as this is an ES6 module -->
