--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
          // will "boot" the module and make it ready to use. Currently browsers
          // don't support natively imported WebAssembly as an ES module, but
          // eventually the manual initialization won't be required!
-         import init, { add } from './pkg/cargotest.js';
+         import init, { add } from './pkg/minesweeper.js';
 
          async function run() {
              // First up we need to actually load the wasm file, so we use the
