--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
          // will "boot" the module and make it ready to use. Currently browsers
          // don't support natively imported WebAssembly as an ES module, but
          // eventually the manual initialization won't be required!
-         import init, { add } from './pkg/minesweeper.js';
+         import init from './pkg/minesweeper.js';
 
          async function run() {
              // First up we need to actually load the wasm file, so we use the
@@ -44,12 +44,6 @@
              // exports which is the same as importing the `*_bg` module in other
              // modes
              await init();
-
-             // And afterwards we can use all the functionality defined in wasm.
-             const result = add(1, 2);
-             console.log(`1 + 2 = ${result}`);
-             if (result !== 3)
-                 throw new Error("wasm addition doesn't work!");
          }
 
          run();
